msm: dsi: Import oneplus iris changes
* iris5 & soft iris

--- a/msm/Makefile
+++ b/msm/Makefile
@@ -74,6 +74,31 @@ msm_drm-$(CONFIG_DRM_MSM_SDE) += sde/sde_crtc.o \
 msm_drm-$(CONFIG_DRM_SDE_WB) += sde/sde_wb.o \
 	sde/sde_encoder_phys_wb.o \
 
+ifeq ($(CONFIG_PXLW_IRIS5), y)
+msm_drm-$(CONFIG_DRM_MSM_DSI) += dsi/dsi_iris5_ioctl.o \
+				dsi/dsi_iris5_lightup.o \
+				dsi/dsi_iris5_lightup_ocp.o \
+				dsi/dsi_iris5_lp.o \
+				dsi/dsi_iris5_lut.o \
+				dsi/dsi_iris5_pq.o \
+				dsi/dsi_iris5_mode_switch.o \
+				dsi/dsi_iris5_cmds.o \
+				dsi/dsi_iris5_i3c.o \
+				dsi/dsi_iris5_i2c.o \
+				dsi/dsi_iris5_dbg.o \
+				dsi/dsi_iris5_loop_back.o
+ccflags-y += -DCONFIG_PXLW_IRIS5
+endif
+
+ifeq ($(PXLW_IRIS_DUAL), 1)
+ccflags-y += -DPXLW_IRIS_DUAL=1
+endif
+
+ifeq ($(CONFIG_PXLW_SOFT_IRIS), y)
+msm_drm-$(CONFIG_DRM_MSM_DSI) += dsi/dsi_irissoft_ioctl.o
+ccflags-y += -DCONFIG_PXLW_SOFT_IRIS
+endif
+
 msm_drm-$(CONFIG_DRM_SDE_RSC) += sde_rsc.o \
 	sde_rsc_hw.o \
 	sde_rsc_hw_v3.o \
